objects/redwing__Equivalency_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Equivalency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equivalency</label>
        <referenceTo>redwing__Equivalency__c</referenceTo>
        <relationshipLabel>Equivalency Items</relationshipLabel>
        <relationshipName>Equivalency_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Learning__c.redwing__Current_Published_Version_Formula__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Equivalency Items</relationshipLabel>
        <relationshipName>Equivalency_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Equivalency Items</relationshipLabel>
        <relationshipName>Equivalency_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Track__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Equivalency Items</relationshipLabel>
        <relationshipName>Equivalency_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equivalency Item</label>
    <nameField>
        <label>Equivalency Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equivalency Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>